- Bugfix: SplitDockStation's compare-method now ensures that the station does not overlap other, smaller stations
- Layout: New "Eclipse Theme", written by Janni Kovacs
- API: DockableDisplayer now tells whether a point lies inside its title or not. The drag n drop gets more flexibel this way
- Bugfix: SecureScreenDockDialog throws NPE when closing
- API: DockActionSource has now to implement Iterable<DockAction>
- API: New DockActionSource "FilteredDockActionSource"
- Bugfix: EclipseStackDockComponent now shows all DockActions
- API: New DockHierarchyListener gets informed when the path to a Dockable changes
- API: New HierarchyDockActionSource, lists all actions of a Dockable even when the hierarchy changes
- API: No rebind of DockTitles after a drag&drop event, the DockHierarchyListener can be used by the titles which need change
- API: Dockable now offers a "local" and a "global" DockActionSource. The global source always contains all available actions
- Layout, API: MenuableButtonPanel, allows to use menus when there is no space for buttons. Automatically used by AbstractDockTitle
- API: DockableDisplayer is now an interface
- API, Bugfix: replaced every occurence of "binded" by "bound", thanks Uwe for correcting me
- API: When adding a Dockable to a DockStation, the station will ensure that no cycles are built into the dock-tree, and that the Dockable is properly removed from its former parent
- Layout: StackDockStation tries to paint the insertion-line now between its tabs
- API: ScreenDockDialog should always stay in the screen in which it has been created, this feature is not tested

[Stable v1.0]
- API: new DoubleClickController, allows handling double clicks on a global scale. Makes the FullScreenClickableListener obsolete.
- Layout: double click on shaped- or rect-tabs in EclipseTheme has now the same effects a double click on a title.
- Bugfix: DockHierarchyEvents were not properly dispatched by the SplitDockStation