@@ -37,10 +37,12 @@ import javax.swing.UIManager;
 import javax.swing.border.Border;
 import javax.swing.border.MatteBorder;
 
+import bibliothek.extension.gui.dock.theme.eclipse.EclipseBorder;
 import bibliothek.extension.gui.dock.theme.eclipse.EclipseDockActionSource;
 import bibliothek.extension.gui.dock.theme.eclipse.rex.RexSystemColor;
 import bibliothek.extension.gui.dock.theme.eclipse.rex.RexTabbedComponent;
 import bibliothek.gui.DockController;
+import bibliothek.gui.DockStation;
 import bibliothek.gui.Dockable;
 import bibliothek.gui.dock.event.DockableListener;
 import bibliothek.gui.dock.themes.basic.action.buttons.ButtonPanel;
@@ -52,6 +54,8 @@ import bibliothek.gui.dock.title.DockTitle;
  */
 public class ShapedGradientPainter extends JComponent implements TabComponent {
 	public static final TabPainter FACTORY = new TabPainter(){
+	    private final Border border = new EclipseBorder( true );
+	    
 	    public TabComponent createTabComponent( DockController controller,
 	            RexTabbedComponent component, Dockable dockable, int index ) {
 
@@ -76,6 +80,14 @@ public class ShapedGradientPainter extends JComponent implements TabComponent {
 				if( from != end )
 					g.drawLine(from, y, end, y);
 			}
+		}
+		
+		public Border getFullBorder( DockController controller, Dockable dockable ) {
+		    return border;
+		}
+		
+		public Border getFullBorder( DockController controller, DockStation station, RexTabbedComponent component ) {
+		    return border;
 		}
 	};
 	
